# template_raylib_imgui_entt

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
src/: application.cpp  application.h  main.cpp  raylib_spdlog.h
